fix cart issue on mobiles

--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -1,5 +1,6 @@
 .cart {
     right: 0;
+    top: 8vh;
     position: fixed;
     width: 100%;
     height: 92vh;
@@ -15,6 +16,7 @@
     scrollbar-color: #aaa transparent;
     transform: translateX(100%);
     animation: fadeInRight 0.3s ease-in-out forwards;
+    box-sizing: border-box;
 }
 
 .cartHeading {
